--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "javaScript-blockchain",
+  "name": "Build-Blockchain-in-nodejs",
   "version": "1.0.0",
-  "description": "Learn Blockchain By Building Your Own In JavaScript",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
